style/flower-market.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');

.noto-serif {
  font-family: "Noto Serif", serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}

@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

.inter-font {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  
  font-style: normal;
}
/* universal */
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    
    
}
/* shared style */
.text{
    font-size: 1.4rem;
    font-weight: 400;
    color: rgba(0, 0, 0, 0.5);
}
.img{
    max-width: 100%;
}
.container{
    max-width: 1440px;
    margin: 0px auto;;
    padding: 0px 150px;  
}
.btn{
  background-color: #E95A08;
  color: white;
  font-size: 1rem;
  font-weight: 600; 
  padding: 19px 65px; 
  border: none;
  
}
.btn:hover{
    color: gray;
    background-color: lightsalmon;
}
.whole-footer a:hover{
    color: lightsalmon;
}

/* header */
/* navbar */
.navbar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 30px;
    flex-wrap: wrap;
}
.navbar ul{
    display: flex;
    gap: 45px;
}
.navbar a{
    
    text-decoration: none;
}
.home{
    color: #252432;
    font-size: 1rem;
    font-weight: bold;

}
.shop-about{
    color:#8987A1 ;
     font-size: 1rem;
     font-weight: 500;
}
.cart{
     font-size: 1rem;
     font-weight: 500;
     color: #000000;
}
.navbar li{
    list-style:none
}
/* banner */
.banner{
    display: flex;
    margin: 120px auto;
    
}
.banner-title{
    font-size: 4rem;
    font-weight: 600;
}
.banner-content{
    width: 50%;
    margin-top: 50px;

}
.fresh{
    color:#E95A08;
}
.flower{
    color: #E95A08;
}
.banner-description{
    margin-top: 13px;

}
/* main */
/* our plants */
.our{
    color: #E95A08;
}
.our-plants-content{
    text-align: center;
}
.our-plants-title{
   font-size: 3rem; 
   font-weight: 700;   
}
.our-plants-description{
    margin-bottom: 48px;
}
.allcards{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 20px;
    width: 100%;
}
.card-container{
    text-align: center;
    width: 100%;
    
   
}
.card-title{
    font-size: 1.4rem;
    font-weight: 500;
    margin-top: 30px;
}
.card-price{
    margin-top: 20px;
    margin-bottom: 30px;
    font-size: 1.4rem;
    font-weight: 700;
}
/* plant lover */
.plants-lover{
    display: flex;
    margin: 150px 0px; 
    gap: 60px;
    justify-content: center; 
    align-items: center;
    
}
.plants-lover-img{
    width: 50%;   
}
.plants-lover-content{
    width: 50%;
    justify-content: center;
    
}
.plants-lover-title{
    font-size: 3rem;
    font-weight: 700;
    margin-bottom: 20px;
}
.all-list{
    margin-left: 30px;
    width: 100%;   
}
.list{
    margin-bottom: 20px;
}
.trusted-badge{
    position: absolute;
    width: 220px;
    margin-left:350px ;
    margin-top: -100px;  
}
.latest-deals{
    text-align: center;
}
.latest-deals-title{
    font-size: 3rem;
    font-weight: 700;
    margin-bottom: 16px;
}
.latest{
    color: #E95A08;
}
/* grid items */
.grid-items{
    margin-top: 115px;
    display: grid;
    grid-template-columns: 1fr 2fr;
    gap: 20px;
    width: 100%;
    text-align: center;
    margin-bottom: 120px;
    
}

.grid-heading{
    margin-bottom:19px ;
    color: white;
    
}
.shop-now a{
    color: white;
}
.grid-item1{
    background-image: url(../assets/deal-bloom.png);
    background-repeat: no-repeat;
    background-position: center;
    border-radius: 14px;
    padding: 50px;
    margin-bottom: 20px;
    
}
.grid-item2{
    background-image: url(../assets/deal-ana.png);
    background-repeat: no-repeat;
    background-position: center;
    padding: 50px;
    border-radius: 14px;

    
}

.grid-item3{
     background-image: url(../assets/deal-zabo.png);
     background-repeat: no-repeat;
     background-position: center;
     padding: 50px;
     border-radius: 22px;
}
.align{
    margin-top: 50px;
    font-size: 2.2rem;
}
/* join section */
.join-section{
    background-image: url(../assets/news-letter-bg.png);
    background-repeat: no-repeat;
    background-position: center;
    width: 100%;
}
.join{
    text-align: center;
}
.join-title{
    font-size: 3rem;
    padding-top: 200px;
    color: white;
    margin-bottom: 23px;
}
.form{
    
    display: flex;
    justify-content: center;
    padding-bottom: 190px;
    padding-left: 300px;
    padding-right: 300px;

}
.join input[type="email"]{
    width: 500px;
    border: none;  
}
/* footer */
.whole-footer{
    display: flex;
    margin: 50px 150px;
    gap: 100px;

}
.footer-left{
    width: 40%;
}
.footer-middle{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    width: 40%;
    gap:32px ;
    
    
}
.footer-middle a{
    text-decoration: none;
    font-size: 1rem;
    color: #6B7280;
   
}

.footer-right{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    align-items: center;
    gap: 10px;
    margin-bottom: 210px;
    
}

/* responsive for mobile */
@media screen and (max-width: 576px) {
    .home{
       display: none; 
    }
    .shop-about{
        display: none;
    }
    .navbar ul{
        flex-direction: column;
        gap: 15px;
        align-items: flex-start;
    }
    .banner{
        flex-direction: column-reverse;        
    }
    
    .container{
        padding: 0px 15px;
    }
    .banner-content{
        margin-top: 20px;
        width: 100%;
    } 
    .banner-title{
        font-size: 1.5rem;
    }  
    .banner-description{
        font-size: 0.9rem;
    } 
    .our-plants-title{
        font-size: 1.5rem;
    }
    .allcards{
        grid-template-columns: repeat(2, 1fr);
        width: 100%;
    } 
    .btn{
        padding: 16px 20px;
    } 
    .navbar{
        flex-wrap: wrap;
        max-width: 100%;
    }
    .plants-lover{
        flex-direction: column;
        gap: 18px;
        
    }
    .plants-lover-content{
        width: 100%;
        
    }
    .plants-lover-img{
        width: 100%;
    
    }
    .plants-lover-title{
        font-size: 1.5rem;
    }
    .all-list{
        font-size: 0.9rem;
        margin-left: 15px;
    }
    .trusted-badge{
        display: none;
    }
    .latest-deals-title{
        font-size: 1.5rem;
    }
    .text{
        font-size: 0.9rem;
    }
    .grid-items{
        grid-template-columns: 1fr;
        margin-bottom: 40px;
    }
    
    .align{
        margin-top: 0px;
        font-size: 1.2rem;
    }
    .join-section{
        margin-top: -20px;
    }
    .join{
        width: 100%;
        height: 100%;
    }
    .join-title{
        font-size: 1rem;
        padding-top: 100px;
    }
    .join input[type="email"]{
        width: 50%;
    }
    .form{    
    justify-content: center;
    padding-bottom: 100px;
    padding-left: 0px;
    padding-right: 0px;
   }
   .whole-footer{
    flex-direction: column;
    gap: 20px;
    margin-left: 20px ;
   }
   .footer-left{
    
    width: 100%;
   }
   .footer-middle{
    grid-template-columns: 1fr;
   }
   .footer-right{
    margin-bottom: 0px;
   }

}

